@@ -144,3 +144,12 @@ HORAS TRABALHADAS: 7h
 - smallfixes no library/base/loader e no controller/dashboard
 
 HORAS TRABALHADAS: 7h
+
+==========
+23/07/2009
+==========
+
+- smallfixes nos webservices
+- documentacao dos webservices do frontend
+
+HORAS TRABALHADAS: 4h
